--- a/src/problems/phase1d/Makefile.am
+++ b/src/problems/phase1d/Makefile.am
@@ -12,8 +12,8 @@ BASEDIR=../../../dune/fem/main
 SOURCES = $(BASEDIR)/phasefield.cc $(BASEDIR)/phasefield_pol.cc
 
 #GRIDTYPE = ALUGRID_CONFORM
-#GRIDTYPE=SPGRID
-GRIDTYPE = YASPGRID
+GRIDTYPE=SPGRID
+#GRIDTYPE = YASPGRID
 GRIDDIM = 1 
 POLORDER= 1
 
