--- a/src/problems/phase1d/Makefile.in
+++ b/src/problems/phase1d/Makefile.in
@@ -325,6 +325,14 @@ DUNE_PHASEFIELD_VERSION = @DUNE_PHASEFIELD_VERSION@
 DUNE_PHASEFIELD_VERSION_MAJOR = @DUNE_PHASEFIELD_VERSION_MAJOR@
 DUNE_PHASEFIELD_VERSION_MINOR = @DUNE_PHASEFIELD_VERSION_MINOR@
 DUNE_PHASEFIELD_VERSION_REVISION = @DUNE_PHASEFIELD_VERSION_REVISION@
+DUNE_SPGRID_CPPFLAGS = @DUNE_SPGRID_CPPFLAGS@
+DUNE_SPGRID_LDFLAGS = @DUNE_SPGRID_LDFLAGS@
+DUNE_SPGRID_LIBS = @DUNE_SPGRID_LIBS@
+DUNE_SPGRID_ROOT = @DUNE_SPGRID_ROOT@
+DUNE_SPGRID_VERSION = @DUNE_SPGRID_VERSION@
+DUNE_SPGRID_VERSION_MAJOR = @DUNE_SPGRID_VERSION_MAJOR@
+DUNE_SPGRID_VERSION_MINOR = @DUNE_SPGRID_VERSION_MINOR@
+DUNE_SPGRID_VERSION_REVISION = @DUNE_SPGRID_VERSION_REVISION@
 DVIPDF = @DVIPDF@
 DVIPS = @DVIPS@
 ECHO_C = @ECHO_C@
@@ -350,12 +358,12 @@ GRAPE_CPPFLAGS = @GRAPE_CPPFLAGS@
 GRAPE_LDFLAGS = @GRAPE_LDFLAGS@
 GRAPE_LIBS = @GRAPE_LIBS@
 GREP = @GREP@
+#GRIDTYPE = YASPGRID
 GRIDDIM = 1 
 GRIDDIM_CPPFLAGS = @GRIDDIM_CPPFLAGS@
 
 #GRIDTYPE = ALUGRID_CONFORM
-#GRIDTYPE=SPGRID
-GRIDTYPE = YASPGRID
+GRIDTYPE = SPGRID
 INKSCAPE = @INKSCAPE@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
@@ -418,6 +426,9 @@ REQUIRES = @REQUIRES@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
+SIONLIB_CPPFLAGS = @SIONLIB_CPPFLAGS@
+SIONLIB_LDFLAGS = @SIONLIB_LDFLAGS@
+SIONLIB_LIBS = @SIONLIB_LIBS@
 STRIP = @STRIP@
 SUPERLU_CPPFLAGS = @SUPERLU_CPPFLAGS@
 SUPERLU_DIST_CPPFLAGS = @SUPERLU_DIST_CPPFLAGS@
@@ -488,6 +499,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+resolved_top_srcdir = @resolved_top_srcdir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
