--- a/src/problems/phase1d/Makefile
+++ b/src/problems/phase1d/Makefile
@@ -159,7 +159,7 @@ ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = ${SHELL} /usr/people/kraenkel/Dune/dune-phasefield/missing --run aclocal-1.11
-ACLOCAL_AMFLAGS = -I . -I m4 -I /usr/people/kraenkel/Dune/dune-common/m4 -I /usr/people/kraenkel/Dune/dune-geometry/m4 -I /usr/people/kraenkel/Dune/dune-grid/m4 -I /usr/people/kraenkel/Dune/dune-istl/m4 -I /usr/people/kraenkel/Dune/dune-localfunctions/m4 -I /usr/people/kraenkel/Dune/dune-fem/m4 -I /usr/people/kraenkel/Dune/dune-fem-dg/m4
+ACLOCAL_AMFLAGS = -I . -I m4 -I /usr/people/kraenkel/Dune/dune-common/m4 -I /usr/people/kraenkel/Dune/dune-geometry/m4 -I /usr/people/kraenkel/Dune/dune-grid/m4 -I /usr/people/kraenkel/Dune/dune-istl/m4 -I /usr/people/kraenkel/Dune/dune-localfunctions/m4 -I /usr/people/kraenkel/Dune/dune-fem/m4 -I /usr/people/kraenkel/Dune/dune-fem-dg/m4 -I /usr/people/kraenkel/Dune/dune-spgrid/m4
 ALBERTA1D_CPPFLAGS = $(ALBERTA_INCLUDE_CPPFLAGS) -DALBERTA_DIM=1 -DENABLE_ALBERTA
 ALBERTA1D_LDFLAGS = 
 ALBERTA1D_LIBS = -L$(DUNE_GRID_LIBDIR) -ldunealbertagrid_1d -ldunegrid $(ALBERTA_LIBPATHFLAGS) -lalberta_1d $(ALBERTA_BASE_LIBS)
@@ -198,9 +198,9 @@ ALBERTA_LIBPATHFLAGS =
 ALBERTA_LIBS = $(ALBERTA$(ALBERTA_DIM)D_LIBS)
 ALGLIB_CPPFLAGS = 
 ALGLIB_LIBS = 
-ALL_PKG_CPPFLAGS =   -I/usr/people/kraenkel/Dune/dune-common  -I/usr/people/kraenkel/Dune/dune-geometry  -I/usr/people/kraenkel/Dune/dune-grid  -I/usr/people/kraenkel/Dune/dune-istl  -I/usr/people/kraenkel/Dune/dune-localfunctions  -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UFconfig -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Include -DENABLE_UMFPACK=1 -I/usr/people/kraenkel/Dune/dune-fem  -I/usr/people/kraenkel/Dune/dune-fem-dg   ${DUNEMPICPPFLAGS} -I/usr/people/kraenkel/Dune/dune-common ${GMP_CPPFLAGS} -I/usr/people/kraenkel/Dune/dune-geometry -DGRIDDIM=$(GRIDDIM) -DWORLDDIM=$(WORLDDIM) -D$(GRIDTYPE) ${ALBERTA_CPPFLAGS} ${UG_CPPFLAGS} ${DUNEMPICPPFLAGS} -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/serial -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/duneinterface -DENABLE_ALUGRID -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/parallel -I/usr/people/kraenkel/Dune/dune-grid ${SUPERLU_CPPFLAGS} -I/usr/people/kraenkel/Dune/dune-istl -I/usr/people/kraenkel/Dune/dune-localfunctions -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UFconfig -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Include -DENABLE_UMFPACK=1 -I/usr/people/kraenkel/Dune/dune-fem -I/usr/people/kraenkel/Dune/dune-fem-dg
-ALL_PKG_LDFLAGS =             -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Lib -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Lib      ${DUNEMPILDFLAGS}     ${ALBERTA_LDFLAGS} ${UG_LDFLAGS} ${DUNEMPILDFLAGS}     -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Lib -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Lib  
-ALL_PKG_LIBS =  -L/usr/people/kraenkel/Dune/dune-fem/lib -ldunefem   ${SUPERLU_LIBS} -L/usr/people/kraenkel/Dune/dune-grid/lib -ldunegrid -L/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/lib -lalugrid ${DUNEMPILIBS} ${UG_LIBS} ${ALBERTA_LIBS}  -L/usr/people/kraenkel/Dune/dune-geometry/lib -ldunegeometry ${GMP_LIBS} -L/usr/people/kraenkel/Dune/dune-common/lib -ldunecommon ${DUNEMPILIBS}  -lumfpack -lamd  -L/usr/people/kraenkel/Dune/dune-fem/lib -ldunefem   -L/usr/people/kraenkel/Dune/dune-grid/lib -ldunegrid -L/usr/people/kraenkel/Dune/dune-geometry/lib -ldunegeometry -L/usr/people/kraenkel/Dune/dune-common/lib -ldunecommon       -lumfpack -lamd   -lm 
+ALL_PKG_CPPFLAGS =   -I/usr/people/kraenkel/Dune/dune-common  -I/usr/people/kraenkel/Dune/dune-geometry  -I/usr/people/kraenkel/Dune/dune-grid  -I/usr/people/kraenkel/Dune/dune-istl  -I/usr/people/kraenkel/Dune/dune-localfunctions  -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UFconfig -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Include -DENABLE_UMFPACK=1 -I/usr/people/kraenkel/Dune/dune-fem  -I/usr/people/kraenkel/Dune/dune-fem-dg  -I/usr/people/kraenkel/Dune/dune-spgrid   ${DUNEMPICPPFLAGS} -I/usr/people/kraenkel/Dune/dune-common ${GMP_CPPFLAGS} -I/usr/people/kraenkel/Dune/dune-geometry -DGRIDDIM=$(GRIDDIM) -DWORLDDIM=$(WORLDDIM) -D$(GRIDTYPE) ${ALBERTA_CPPFLAGS} ${UG_CPPFLAGS} ${DUNEMPICPPFLAGS} -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/serial -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/duneinterface -DENABLE_ALUGRID -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/parallel -I/usr/people/kraenkel/Dune/dune-grid ${SUPERLU_CPPFLAGS} -I/usr/people/kraenkel/Dune/dune-istl -I/usr/people/kraenkel/Dune/dune-localfunctions -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UFconfig -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Include -DENABLE_UMFPACK=1 -I/usr/people/kraenkel/Dune/dune-fem -I/usr/people/kraenkel/Dune/dune-fem-dg -I/usr/people/kraenkel/Dune/dune-spgrid
+ALL_PKG_LDFLAGS =             -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Lib -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Lib        ${DUNEMPILDFLAGS}     ${ALBERTA_LDFLAGS} ${UG_LDFLAGS} ${DUNEMPILDFLAGS}     -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Lib -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Lib   
+ALL_PKG_LIBS =   /usr/people/kraenkel/Dune/dune-fem/lib/libdunefem.la   ${SUPERLU_LIBS} /usr/people/kraenkel/Dune/dune-grid/lib/libdunegrid.la -L/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/lib -lalugrid ${DUNEMPILIBS} ${UG_LIBS} ${ALBERTA_LIBS}  /usr/people/kraenkel/Dune/dune-geometry/lib/libdunegeometry.la ${GMP_LIBS} /usr/people/kraenkel/Dune/dune-common/lib/libdunecommon.la ${DUNEMPILIBS}  -lumfpack -lamd   /usr/people/kraenkel/Dune/dune-fem/lib/libdunefem.la   /usr/people/kraenkel/Dune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/Dune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/Dune/dune-common/lib/libdunecommon.la       -lumfpack -lamd    -lm 
 ALUGRID_CPPFLAGS = ${DUNEMPICPPFLAGS} -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/serial -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/duneinterface -DENABLE_ALUGRID -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/parallel
 ALUGRID_LDFLAGS = ${DUNEMPILDFLAGS}
 ALUGRID_LIBS = -L/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/lib -lalugrid ${DUNEMPILIBS}
@@ -258,13 +258,13 @@ DUNEWEBDIR = no
 DUNE_COMMON_CPPFLAGS = 
 DUNE_COMMON_LDFLAGS = 
 DUNE_COMMON_LIBDIR = /usr/people/kraenkel/Dune/dune-common/lib
-DUNE_COMMON_LIBS = 
+DUNE_COMMON_LIBS = /usr/people/kraenkel/Dune/dune-common/lib/libdunecommon.la
 DUNE_COMMON_ROOT = /usr/people/kraenkel/Dune/dune-common
 DUNE_COMMON_VERSION = 2.2-svn
 DUNE_COMMON_VERSION_MAJOR = 2
 DUNE_COMMON_VERSION_MINOR = 2
 DUNE_COMMON_VERSION_REVISION = 0
-DUNE_CPPFLAGS =  -I/usr/people/kraenkel/Dune/dune-common -I/usr/people/kraenkel/Dune/dune-geometry -I/usr/people/kraenkel/Dune/dune-grid -I/usr/people/kraenkel/Dune/dune-istl -I/usr/people/kraenkel/Dune/dune-localfunctions -I/usr/people/kraenkel/Dune/dune-fem -I/usr/people/kraenkel/Dune/dune-fem-dg
+DUNE_CPPFLAGS =  -I/usr/people/kraenkel/Dune/dune-common -I/usr/people/kraenkel/Dune/dune-geometry -I/usr/people/kraenkel/Dune/dune-grid -I/usr/people/kraenkel/Dune/dune-istl -I/usr/people/kraenkel/Dune/dune-localfunctions -I/usr/people/kraenkel/Dune/dune-fem -I/usr/people/kraenkel/Dune/dune-fem-dg -I/usr/people/kraenkel/Dune/dune-spgrid
 DUNE_FEM_CPPFLAGS = 
 DUNE_FEM_DG_CPPFLAGS = 
 DUNE_FEM_DG_LDFLAGS = 
@@ -276,16 +276,16 @@ DUNE_FEM_DG_VERSION_MINOR = 1
 DUNE_FEM_DG_VERSION_REVISION = 0
 DUNE_FEM_LDFLAGS = 
 DUNE_FEM_LIBDIR = /usr/people/kraenkel/Dune/dune-fem/lib
-DUNE_FEM_LIBS = 
+DUNE_FEM_LIBS = /usr/people/kraenkel/Dune/dune-fem/lib/libdunefem.la
 DUNE_FEM_ROOT = /usr/people/kraenkel/Dune/dune-fem
-DUNE_FEM_VERSION = 1.3.0
+DUNE_FEM_VERSION = 1.4.0
 DUNE_FEM_VERSION_MAJOR = 1
-DUNE_FEM_VERSION_MINOR = 3
+DUNE_FEM_VERSION_MINOR = 4
 DUNE_FEM_VERSION_REVISION = 0
 DUNE_GEOMETRY_CPPFLAGS = 
 DUNE_GEOMETRY_LDFLAGS = 
 DUNE_GEOMETRY_LIBDIR = /usr/people/kraenkel/Dune/dune-geometry/lib
-DUNE_GEOMETRY_LIBS = 
+DUNE_GEOMETRY_LIBS = /usr/people/kraenkel/Dune/dune-geometry/lib/libdunegeometry.la
 DUNE_GEOMETRY_ROOT = /usr/people/kraenkel/Dune/dune-geometry
 DUNE_GEOMETRY_VERSION = 2.2-svn
 DUNE_GEOMETRY_VERSION_MAJOR = 2
@@ -294,7 +294,7 @@ DUNE_GEOMETRY_VERSION_REVISION = 0
 DUNE_GRID_CPPFLAGS = 
 DUNE_GRID_LDFLAGS = 
 DUNE_GRID_LIBDIR = /usr/people/kraenkel/Dune/dune-grid/lib
-DUNE_GRID_LIBS = 
+DUNE_GRID_LIBS = /usr/people/kraenkel/Dune/dune-grid/lib/libdunegrid.la
 DUNE_GRID_ROOT = /usr/people/kraenkel/Dune/dune-grid
 DUNE_GRID_VERSION = 2.2-svn
 DUNE_GRID_VERSION_MAJOR = 2
@@ -308,8 +308,8 @@ DUNE_ISTL_VERSION = 2.2-svn
 DUNE_ISTL_VERSION_MAJOR = 2
 DUNE_ISTL_VERSION_MINOR = 2
 DUNE_ISTL_VERSION_REVISION = 0
-DUNE_LDFLAGS =               
-DUNE_LIBS =    -L/usr/people/kraenkel/Dune/dune-fem/lib -ldunefem      -L/usr/people/kraenkel/Dune/dune-grid/lib -ldunegrid  -L/usr/people/kraenkel/Dune/dune-geometry/lib -ldunegeometry  -L/usr/people/kraenkel/Dune/dune-common/lib -ldunecommon 
+DUNE_LDFLAGS =                 
+DUNE_LIBS =     /usr/people/kraenkel/Dune/dune-fem/lib/libdunefem.la /usr/people/kraenkel/Dune/dune-fem/lib/libdunefem.la     /usr/people/kraenkel/Dune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/Dune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/Dune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/Dune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/Dune/dune-common/lib/libdunecommon.la /usr/people/kraenkel/Dune/dune-common/lib/libdunecommon.la 
 DUNE_LOCALFUNCTIONS_CPPFLAGS = 
 DUNE_LOCALFUNCTIONS_LDFLAGS = 
 DUNE_LOCALFUNCTIONS_LIBS = 
@@ -325,6 +325,14 @@ DUNE_PHASEFIELD_VERSION = 0.0
 DUNE_PHASEFIELD_VERSION_MAJOR = 0
 DUNE_PHASEFIELD_VERSION_MINOR = 0
 DUNE_PHASEFIELD_VERSION_REVISION = 0
+DUNE_SPGRID_CPPFLAGS = 
+DUNE_SPGRID_LDFLAGS = 
+DUNE_SPGRID_LIBS = 
+DUNE_SPGRID_ROOT = /usr/people/kraenkel/Dune/dune-spgrid
+DUNE_SPGRID_VERSION = 2012.13
+DUNE_SPGRID_VERSION_MAJOR = 2012
+DUNE_SPGRID_VERSION_MINOR = 13
+DUNE_SPGRID_VERSION_REVISION = 0
 DVIPDF = dvipdf
 DVIPS = dvips
 ECHO_C = 
@@ -350,12 +358,12 @@ GRAPE_CPPFLAGS =
 GRAPE_LDFLAGS = 
 GRAPE_LIBS = 
 GREP = /bin/grep
+#GRIDTYPE = YASPGRID
 GRIDDIM = 1 
 GRIDDIM_CPPFLAGS = -DGRIDDIM=$(GRIDDIM) -DWORLDDIM=$(WORLDDIM) -D$(GRIDTYPE)
 
 #GRIDTYPE = ALUGRID_CONFORM
-#GRIDTYPE=SPGRID
-GRIDTYPE = YASPGRID
+GRIDTYPE = SPGRID
 INKSCAPE = inkscape
 INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
@@ -366,7 +374,7 @@ LAPACK_LIBS = -llapack
 LD = /usr/x86_64-pc-linux-gnu/bin/ld -m elf_x86_64
 LDFLAGS = 
 LIBOBJS = 
-LIBS =    -L/usr/people/kraenkel/Dune/dune-fem/lib -ldunefem      -L/usr/people/kraenkel/Dune/dune-grid/lib -ldunegrid  -L/usr/people/kraenkel/Dune/dune-geometry/lib -ldunegeometry  -L/usr/people/kraenkel/Dune/dune-common/lib -ldunecommon 
+LIBS =     /usr/people/kraenkel/Dune/dune-fem/lib/libdunefem.la /usr/people/kraenkel/Dune/dune-fem/lib/libdunefem.la     /usr/people/kraenkel/Dune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/Dune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/Dune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/Dune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/Dune/dune-common/lib/libdunecommon.la /usr/people/kraenkel/Dune/dune-common/lib/libdunecommon.la 
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIPO = 
 LN_S = ln -s
@@ -418,6 +426,9 @@ REQUIRES =  dune-common   dune-geometry   dune-grid   dune-istl   dune-localfunc
 SED = /bin/sed
 SET_MAKE = 
 SHELL = /bin/sh
+SIONLIB_CPPFLAGS = 
+SIONLIB_LDFLAGS = 
+SIONLIB_LIBS = 
 STRIP = strip
 SUPERLU_CPPFLAGS = 
 SUPERLU_DIST_CPPFLAGS = -I/usr/local/SRC 
@@ -488,6 +499,7 @@ pdfdir = ${docdir}
 prefix = /usr/local
 program_transform_name = s,x,x,
 psdir = ${docdir}
+resolved_top_srcdir = /usr/people/kraenkel/Dune/dune-phasefield
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 srcdir = .
