begin with nonconervative scheme

--- a/src/problems/phase1d/Makefile.am
+++ b/src/problems/phase1d/Makefile.am
@@ -33,12 +33,12 @@ AM_CPPFLAGS = $(USE_OMP) -I../../problems/phase  $(ALL_PKG_CPPFLAGS) -DGRIDDIM=$
               -DFLUX=$(FLUX) -DDUALDG # -DWBPROBLEM -DWELLBALANCE
 AM_LDFLAGS = $(ALL_PKG_LDFLAGS) $(LAPACK_LDFLAGS) $(USE_OMP)              
 
-check_PROGRAMS = phasefield
+check_PROGRAMS = phasefield phasefield_nc
 phasefield_SOURCES = $(SOURCES) 
-
-
-
 phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER)
+phasefield_nc_SOURCES = $(SOURCES) 
+phasefield_nc_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DNONCON
+
 
 DISTCHECK_CONFIGURE_FLAGS = DOXYGEN="true"
 
