--- a/src/problems/1dphase/Makefile.in
+++ b/src/problems/1dphase/Makefile.in
@@ -85,10 +85,10 @@ DIST_COMMON = $(phase_HEADERS) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(top_srcdir)/am/checklog \
 	$(top_srcdir)/am/documentation $(top_srcdir)/am/global-rules \
 	$(top_srcdir)/am/headercheck $(top_srcdir)/am/sourcescheck
-subdir = src/problems/phase1d
+subdir = src/problems/1dphase
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/dependencies.m4 \
-	$(top_srcdir)/configure.ac
+am__aclocal_m4_deps = $(top_srcdir)/m4/dune-phasefield.m4 \
+	$(top_srcdir)/dependencies.m4 $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
@@ -385,7 +385,7 @@ GRAPE_LDFLAGS = @GRAPE_LDFLAGS@
 GRAPE_LIBS = @GRAPE_LIBS@
 GREP = @GREP@
 #GRIDTYPE = YASPGRID
-GRIDDIM = 2 
+GRIDDIM = 1 
 GRIDDIM_CPPFLAGS = @GRIDDIM_CPPFLAGS@
 
 #GRIDTYPE = ALUGRID_CONFORM
@@ -588,9 +588,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am $(top_srcdir)/am/global-rules $(to
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign src/problems/phase1d/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign src/problems/1dphase/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign src/problems/phase1d/Makefile
+	  $(AUTOMAKE) --foreign src/problems/1dphase/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
