make new simultation algorithm compile

--- a/dune/fem/main/Makefile.in
+++ b/dune/fem/main/Makefile.in
@@ -85,8 +85,8 @@ DIST_COMMON = $(main_HEADERS) $(srcdir)/Makefile.am \
 	$(top_srcdir)/am/headercheck $(top_srcdir)/am/sourcescheck
 subdir = dune/fem/main
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/m4/dune-phasefield.m4 \
-	$(top_srcdir)/dependencies.m4 $(top_srcdir)/configure.ac
+am__aclocal_m4_deps = $(top_srcdir)/dependencies.m4 \
+	$(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
