--- a/dune/phasefield/Makefile.am
+++ b/dune/phasefield/Makefile.am
@@ -1,4 +1,4 @@
 phasefieldincludedir = $(includedir)/dune/phasefield
-phasefieldinclude_HEADERS = phasefield.hh
+phasefieldinclude_HEADERS = phasefield.hh algorithmtraits.hh phasefieldalgorihtm.hh
 
 include $(top_srcdir)/am/global-rules
