--- a/src/problems/1dphase/Makefile
+++ b/src/problems/1dphase/Makefile
@@ -77,8 +77,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = i686-pc-linux-gnu
-host_triplet = i686-pc-linux-gnu
+build_triplet = x86_64-unknown-linux-gnu
+host_triplet = x86_64-unknown-linux-gnu
 check_PROGRAMS = phasefield$(EXEEXT) phasefield_nc$(EXEEXT) \
 	phasefield_wb$(EXEEXT) newphasefield_wb$(EXEEXT)
 DIST_COMMON = $(phase_HEADERS) $(srcdir)/Makefile.am \
@@ -184,17 +184,17 @@ HEADERS = $(phase_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /windows/Work/Dune/dune-phasefield/missing --run aclocal-1.11
-ACLOCAL_AMFLAGS = -I . -I m4 -I /windows/Work/Dune/dune-common/m4 -I /windows/Work/Dune/dune-geometry/m4 -I /windows/Work/Dune/dune-grid/m4 -I /windows/Work/Dune/dune-istl/m4 -I /windows/Work/Dune/dune-localfunctions/m4 -I /windows/Work/Dune/dune-fem/m4 -I /windows/Work/Dune/dune-fem-dg/m4 -I /windows/Work/Dune/dune-spgrid/m4
-ALBERTA1D_CPPFLAGS = 
+ACLOCAL = ${SHELL} /usr/people/kraenkel/Dune/dune-phasefield/missing --run aclocal-1.11
+ACLOCAL_AMFLAGS = -I . -I m4 -I /usr/people/kraenkel/Dune/dune-common/m4 -I /usr/people/kraenkel/Dune/dune-geometry/m4 -I /usr/people/kraenkel/Dune/dune-grid/m4 -I /usr/people/kraenkel/Dune/dune-istl/m4 -I /usr/people/kraenkel/Dune/dune-localfunctions/m4 -I /usr/people/kraenkel/Dune/dune-fem/m4 -I /usr/people/kraenkel/Dune/dune-fem-dg/m4 -I /usr/people/kraenkel/Dune/dune-spgrid/m4
+ALBERTA1D_CPPFLAGS = $(ALBERTA_INCLUDE_CPPFLAGS) -DALBERTA_DIM=1 -DENABLE_ALBERTA
 ALBERTA1D_LDFLAGS = 
-ALBERTA1D_LIBS = 
-ALBERTA2D_CPPFLAGS = 
+ALBERTA1D_LIBS = -L$(DUNE_GRID_LIBDIR) -ldunealbertagrid_1d -ldunegrid $(ALBERTA_LIBPATHFLAGS) -lalberta_1d $(ALBERTA_BASE_LIBS)
+ALBERTA2D_CPPFLAGS = $(ALBERTA_INCLUDE_CPPFLAGS) -DALBERTA_DIM=2 -DENABLE_ALBERTA
 ALBERTA2D_LDFLAGS = 
-ALBERTA2D_LIBS = 
-ALBERTA3D_CPPFLAGS = 
+ALBERTA2D_LIBS = -L$(DUNE_GRID_LIBDIR) -ldunealbertagrid_2d -ldunegrid $(ALBERTA_LIBPATHFLAGS) -lalberta_2d $(ALBERTA_BASE_LIBS)
+ALBERTA3D_CPPFLAGS = $(ALBERTA_INCLUDE_CPPFLAGS) -DALBERTA_DIM=3 -DENABLE_ALBERTA
 ALBERTA3D_LDFLAGS = 
-ALBERTA3D_LIBS = 
+ALBERTA3D_LIBS = -L$(DUNE_GRID_LIBDIR) -ldunealbertagrid_3d -ldunegrid $(ALBERTA_LIBPATHFLAGS) -lalberta_3d $(ALBERTA_BASE_LIBS)
 ALBERTA4D_CPPFLAGS = 
 ALBERTA4D_LDFLAGS = 
 ALBERTA4D_LIBS = 
@@ -213,27 +213,27 @@ ALBERTA8D_LIBS =
 ALBERTA9D_CPPFLAGS = 
 ALBERTA9D_LDFLAGS = 
 ALBERTA9D_LIBS = 
-ALBERTAROOT = 
-ALBERTA_BASE_LIBS = 
-ALBERTA_CPPFLAGS = 
-ALBERTA_DIM = 
+ALBERTAROOT = /hosts/raid5/aragorn/dune/modules/x86_64/alberta
+ALBERTA_BASE_LIBS = $(ALBERTA_LIBPATHFLAGS) -lalberta_util 
+ALBERTA_CPPFLAGS = $(ALBERTA$(ALBERTA_DIM)D_CPPFLAGS)
+ALBERTA_DIM = $(WORLDDIM)
 ALBERTA_DIM_CPPFLAGS = 
-ALBERTA_INCLUDE_CPPFLAGS = 
-ALBERTA_LDFLAGS = 
+ALBERTA_INCLUDE_CPPFLAGS = -I/hosts/raid5/aragorn/dune/modules/x86_64/alberta/include -I/hosts/raid5/aragorn/dune/modules/x86_64/alberta/include/alberta
+ALBERTA_LDFLAGS = $(ALBERTA$(ALBERTA_DIM)D_LDFLAGS)
 ALBERTA_LIBPATHFLAGS = 
-ALBERTA_LIBS = 
+ALBERTA_LIBS = $(ALBERTA$(ALBERTA_DIM)D_LIBS)
 ALGLIB_CPPFLAGS = 
 ALGLIB_LIBS = 
-ALL_PKG_CPPFLAGS =   -I/windows/Work/Dune/dune-common  -I/windows/Work/Dune/dune-geometry  -I/windows/Work/Dune/dune-grid  -I/windows/Work/Dune/dune-istl  -I/windows/Work/Dune/dune-localfunctions  -I/windows/Work/Dune/dune-fem  -I/windows/Work/Dune/dune-fem-dg  -I/windows/Work/Dune/dune-spgrid   ${DUNEMPICPPFLAGS} -I/windows/Work/Dune/dune-common ${GMP_CPPFLAGS} -I/windows/Work/Dune/dune-geometry -DGRIDDIM=$(GRIDDIM) -DWORLDDIM=$(WORLDDIM) -D$(GRIDTYPE) ${UG_CPPFLAGS} -I/windows/Work/Dune/dune-grid ${SUPERLU_CPPFLAGS} -I/windows/Work/Dune/dune-istl -I/windows/Work/Dune/dune-localfunctions -I/windows/Work/Dune/dune-fem -I/windows/Work/Dune/dune-fem-dg -I/windows/Work/Dune/dune-spgrid
-ALL_PKG_LDFLAGS =                    ${DUNEMPILDFLAGS}     ${UG_LDFLAGS}       
-ALL_PKG_LIBS =   /windows/Work/Dune/dune-fem/lib/libdunefem.la   ${SUPERLU_LIBS} /windows/Work/Dune/dune-grid/lib/libdunegrid.la ${UG_LIBS}  /windows/Work/Dune/dune-geometry/lib/libdunegeometry.la ${GMP_LIBS} /windows/Work/Dune/dune-common/lib/libdunecommon.la ${DUNEMPILIBS}    /windows/Work/Dune/dune-fem/lib/libdunefem.la   /windows/Work/Dune/dune-grid/lib/libdunegrid.la /windows/Work/Dune/dune-geometry/lib/libdunegeometry.la /windows/Work/Dune/dune-common/lib/libdunecommon.la          -lm 
-ALUGRID_CPPFLAGS = 
-ALUGRID_LDFLAGS = 
-ALUGRID_LIBS = 
+ALL_PKG_CPPFLAGS =   -I/usr/people/kraenkel/Dune/dune-common  -I/usr/people/kraenkel/Dune/dune-geometry  -I/usr/people/kraenkel/Dune/dune-grid  -I/usr/people/kraenkel/Dune/dune-istl  -I/usr/people/kraenkel/Dune/dune-localfunctions  -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UFconfig -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Include -DENABLE_UMFPACK=1 -I/usr/people/kraenkel/Dune/dune-fem  -I/usr/people/kraenkel/Dune/dune-fem-dg  -I/usr/people/kraenkel/Dune/dune-spgrid   ${DUNEMPICPPFLAGS} -I/usr/people/kraenkel/Dune/dune-common ${GMP_CPPFLAGS} -I/usr/people/kraenkel/Dune/dune-geometry -DGRIDDIM=$(GRIDDIM) -DWORLDDIM=$(WORLDDIM) -D$(GRIDTYPE) ${ALBERTA_CPPFLAGS} ${UG_CPPFLAGS} ${DUNEMPICPPFLAGS} -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/serial -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/duneinterface -DENABLE_ALUGRID -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/parallel -I/usr/people/kraenkel/Dune/dune-grid ${SUPERLU_CPPFLAGS} -I/usr/people/kraenkel/Dune/dune-istl -I/usr/people/kraenkel/Dune/dune-localfunctions -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UFconfig -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Include -DENABLE_UMFPACK=1 -I/usr/people/kraenkel/Dune/dune-fem -I/usr/people/kraenkel/Dune/dune-fem-dg -I/usr/people/kraenkel/Dune/dune-spgrid
+ALL_PKG_LDFLAGS =             -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Lib -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Lib        ${DUNEMPILDFLAGS}     ${ALBERTA_LDFLAGS} ${UG_LDFLAGS} ${DUNEMPILDFLAGS}     -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Lib -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Lib   
+ALL_PKG_LIBS =   /usr/people/kraenkel/Dune/dune-fem/lib/libdunefem.la   ${SUPERLU_LIBS} /usr/people/kraenkel/Dune/dune-grid/lib/libdunegrid.la -L/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/lib -lalugrid ${DUNEMPILIBS} ${UG_LIBS} ${ALBERTA_LIBS}  /usr/people/kraenkel/Dune/dune-geometry/lib/libdunegeometry.la ${GMP_LIBS} /usr/people/kraenkel/Dune/dune-common/lib/libdunecommon.la ${DUNEMPILIBS}  -lumfpack -lamd   /usr/people/kraenkel/Dune/dune-fem/lib/libdunefem.la   /usr/people/kraenkel/Dune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/Dune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/Dune/dune-common/lib/libdunecommon.la       -lumfpack -lamd    -lm 
+ALUGRID_CPPFLAGS = ${DUNEMPICPPFLAGS} -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/serial -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/duneinterface -DENABLE_ALUGRID -I/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/include/parallel
+ALUGRID_LDFLAGS = ${DUNEMPILDFLAGS}
+ALUGRID_LIBS = -L/hosts/raid5/aragorn/dune/modules/x86_64/ALUGrid-1.50/lib -lalugrid ${DUNEMPILIBS}
 AMIRAMESH_CPPFLAGS = 
 AMIRAMESH_LDFLAGS = 
 AMIRAMESH_LIBS = 
-AMTAR = ${SHELL} /windows/Work/Dune/dune-phasefield/missing --run tar
+AMTAR = ${SHELL} /usr/people/kraenkel/Dune/dune-phasefield/missing --run tar
 
 # INFO SPACE OPERATOR:
 # 		1. define PRIMALDG for various space operators in primal formulation
@@ -250,14 +250,14 @@ AM_CPPFLAGS = $(USE_OMP) -I../../problems/phase  $(ALL_PKG_CPPFLAGS) -DGRIDDIM=$
 AM_DEFAULT_VERBOSITY = 1
 AM_LDFLAGS = $(ALL_PKG_LDFLAGS) $(LAPACK_LDFLAGS) $(USE_OMP)              
 AR = ar
-AUTOCONF = ${SHELL} /windows/Work/Dune/dune-phasefield/missing --run autoconf
-AUTOHEADER = ${SHELL} /windows/Work/Dune/dune-phasefield/missing --run autoheader
-AUTOMAKE = ${SHELL} /windows/Work/Dune/dune-phasefield/missing --run automake-1.11
+AUTOCONF = ${SHELL} /usr/people/kraenkel/Dune/dune-phasefield/missing --run autoconf
+AUTOHEADER = ${SHELL} /usr/people/kraenkel/Dune/dune-phasefield/missing --run autoheader
+AUTOMAKE = ${SHELL} /usr/people/kraenkel/Dune/dune-phasefield/missing --run automake-1.11
 AWK = gawk
 BIBTEX = bibtex
 BLAS_LIBS = -lblas
 BOOST_CPPFLAGS = -I/usr/include -DENABLE_BOOST
-BOOST_LDFLAGS = -L/usr/lib
+BOOST_LDFLAGS = -L/usr/lib64
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2 -Wall
@@ -282,45 +282,45 @@ DUNEMPILIBS =
 DUNEWEBDIR = no
 DUNE_COMMON_CPPFLAGS = 
 DUNE_COMMON_LDFLAGS = 
-DUNE_COMMON_LIBDIR = /windows/Work/Dune/dune-common/lib
-DUNE_COMMON_LIBS = /windows/Work/Dune/dune-common/lib/libdunecommon.la
-DUNE_COMMON_ROOT = /windows/Work/Dune/dune-common
+DUNE_COMMON_LIBDIR = /usr/people/kraenkel/Dune/dune-common/lib
+DUNE_COMMON_LIBS = /usr/people/kraenkel/Dune/dune-common/lib/libdunecommon.la
+DUNE_COMMON_ROOT = /usr/people/kraenkel/Dune/dune-common
 DUNE_COMMON_VERSION = 2.3-svn
 DUNE_COMMON_VERSION_MAJOR = 2
 DUNE_COMMON_VERSION_MINOR = 3
 DUNE_COMMON_VERSION_REVISION = 0
-DUNE_CPPFLAGS =  -I/windows/Work/Dune/dune-common -I/windows/Work/Dune/dune-geometry -I/windows/Work/Dune/dune-grid -I/windows/Work/Dune/dune-istl -I/windows/Work/Dune/dune-localfunctions -I/windows/Work/Dune/dune-fem -I/windows/Work/Dune/dune-fem-dg -I/windows/Work/Dune/dune-spgrid
+DUNE_CPPFLAGS =  -I/usr/people/kraenkel/Dune/dune-common -I/usr/people/kraenkel/Dune/dune-geometry -I/usr/people/kraenkel/Dune/dune-grid -I/usr/people/kraenkel/Dune/dune-istl -I/usr/people/kraenkel/Dune/dune-localfunctions -I/usr/people/kraenkel/Dune/dune-fem -I/usr/people/kraenkel/Dune/dune-fem-dg -I/usr/people/kraenkel/Dune/dune-spgrid
 DUNE_FEM_CPPFLAGS = 
 DUNE_FEM_DG_CPPFLAGS = 
 DUNE_FEM_DG_LDFLAGS = 
 DUNE_FEM_DG_LIBS = 
-DUNE_FEM_DG_ROOT = /windows/Work/Dune/dune-fem-dg
+DUNE_FEM_DG_ROOT = /usr/people/kraenkel/Dune/dune-fem-dg
 DUNE_FEM_DG_VERSION = 0.1
 DUNE_FEM_DG_VERSION_MAJOR = 0
 DUNE_FEM_DG_VERSION_MINOR = 1
 DUNE_FEM_DG_VERSION_REVISION = 0
 DUNE_FEM_LDFLAGS = 
-DUNE_FEM_LIBDIR = /windows/Work/Dune/dune-fem/lib
-DUNE_FEM_LIBS = /windows/Work/Dune/dune-fem/lib/libdunefem.la
-DUNE_FEM_ROOT = /windows/Work/Dune/dune-fem
+DUNE_FEM_LIBDIR = /usr/people/kraenkel/Dune/dune-fem/lib
+DUNE_FEM_LIBS = /usr/people/kraenkel/Dune/dune-fem/lib/libdunefem.la
+DUNE_FEM_ROOT = /usr/people/kraenkel/Dune/dune-fem
 DUNE_FEM_VERSION = 1.4.0
 DUNE_FEM_VERSION_MAJOR = 1
 DUNE_FEM_VERSION_MINOR = 4
 DUNE_FEM_VERSION_REVISION = 0
 DUNE_GEOMETRY_CPPFLAGS = 
 DUNE_GEOMETRY_LDFLAGS = 
-DUNE_GEOMETRY_LIBDIR = /windows/Work/Dune/dune-geometry/lib
-DUNE_GEOMETRY_LIBS = /windows/Work/Dune/dune-geometry/lib/libdunegeometry.la
-DUNE_GEOMETRY_ROOT = /windows/Work/Dune/dune-geometry
+DUNE_GEOMETRY_LIBDIR = /usr/people/kraenkel/Dune/dune-geometry/lib
+DUNE_GEOMETRY_LIBS = /usr/people/kraenkel/Dune/dune-geometry/lib/libdunegeometry.la
+DUNE_GEOMETRY_ROOT = /usr/people/kraenkel/Dune/dune-geometry
 DUNE_GEOMETRY_VERSION = 2.3-svn
 DUNE_GEOMETRY_VERSION_MAJOR = 2
 DUNE_GEOMETRY_VERSION_MINOR = 3
 DUNE_GEOMETRY_VERSION_REVISION = 0
 DUNE_GRID_CPPFLAGS = 
 DUNE_GRID_LDFLAGS = 
-DUNE_GRID_LIBDIR = /windows/Work/Dune/dune-grid/lib
-DUNE_GRID_LIBS = /windows/Work/Dune/dune-grid/lib/libdunegrid.la
-DUNE_GRID_ROOT = /windows/Work/Dune/dune-grid
+DUNE_GRID_LIBDIR = /usr/people/kraenkel/Dune/dune-grid/lib
+DUNE_GRID_LIBS = /usr/people/kraenkel/Dune/dune-grid/lib/libdunegrid.la
+DUNE_GRID_ROOT = /usr/people/kraenkel/Dune/dune-grid
 DUNE_GRID_VERSION = 2.3-svn
 DUNE_GRID_VERSION_MAJOR = 2
 DUNE_GRID_VERSION_MINOR = 3
@@ -328,17 +328,17 @@ DUNE_GRID_VERSION_REVISION = 0
 DUNE_ISTL_CPPFLAGS = 
 DUNE_ISTL_LDFLAGS = 
 DUNE_ISTL_LIBS = 
-DUNE_ISTL_ROOT = /windows/Work/Dune/dune-istl
+DUNE_ISTL_ROOT = /usr/people/kraenkel/Dune/dune-istl
 DUNE_ISTL_VERSION = 2.3-svn
 DUNE_ISTL_VERSION_MAJOR = 2
 DUNE_ISTL_VERSION_MINOR = 3
 DUNE_ISTL_VERSION_REVISION = 0
 DUNE_LDFLAGS =                 
-DUNE_LIBS =     /windows/Work/Dune/dune-fem/lib/libdunefem.la /windows/Work/Dune/dune-fem/lib/libdunefem.la     /windows/Work/Dune/dune-grid/lib/libdunegrid.la /windows/Work/Dune/dune-grid/lib/libdunegrid.la /windows/Work/Dune/dune-geometry/lib/libdunegeometry.la /windows/Work/Dune/dune-geometry/lib/libdunegeometry.la /windows/Work/Dune/dune-common/lib/libdunecommon.la /windows/Work/Dune/dune-common/lib/libdunecommon.la 
+DUNE_LIBS =     /usr/people/kraenkel/Dune/dune-fem/lib/libdunefem.la /usr/people/kraenkel/Dune/dune-fem/lib/libdunefem.la     /usr/people/kraenkel/Dune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/Dune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/Dune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/Dune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/Dune/dune-common/lib/libdunecommon.la /usr/people/kraenkel/Dune/dune-common/lib/libdunecommon.la 
 DUNE_LOCALFUNCTIONS_CPPFLAGS = 
 DUNE_LOCALFUNCTIONS_LDFLAGS = 
 DUNE_LOCALFUNCTIONS_LIBS = 
-DUNE_LOCALFUNCTIONS_ROOT = /windows/Work/Dune/dune-localfunctions
+DUNE_LOCALFUNCTIONS_ROOT = /usr/people/kraenkel/Dune/dune-localfunctions
 DUNE_LOCALFUNCTIONS_VERSION = 2.3-svn
 DUNE_LOCALFUNCTIONS_VERSION_MAJOR = 2
 DUNE_LOCALFUNCTIONS_VERSION_MINOR = 3
@@ -353,7 +353,7 @@ DUNE_PHASEFIELD_VERSION_REVISION = 0
 DUNE_SPGRID_CPPFLAGS = 
 DUNE_SPGRID_LDFLAGS = 
 DUNE_SPGRID_LIBS = 
-DUNE_SPGRID_ROOT = /windows/Work/Dune/dune-spgrid
+DUNE_SPGRID_ROOT = /usr/people/kraenkel/Dune/dune-spgrid
 DUNE_SPGRID_VERSION = 2012.13
 DUNE_SPGRID_VERSION_MAJOR = 2012
 DUNE_SPGRID_VERSION_MINOR = 13
@@ -369,10 +369,10 @@ EXEEXT =
 F77 = gfortran
 FC = gfortran
 FCFLAGS = -g -O2
-FCLIBS =  -L/usr/lib/gcc/i686-pc-linux-gnu/4.3.4 -L/usr/lib/gcc/i686-pc-linux-gnu/4.3.4/../../../../i686-pc-linux-gnu/lib -L/usr/lib/gcc/i686-pc-linux-gnu/4.3.4/../../.. -lgfortranbegin -lgfortran -lm
+FCLIBS =  -L/usr/lib/gcc/x86_64-pc-linux-gnu/4.5.3 -L/usr/lib/gcc/x86_64-pc-linux-gnu/4.5.3/../../../../lib64 -L/lib/../lib64 -L/usr/lib/../lib64 -L/usr/lib/gcc/x86_64-pc-linux-gnu/4.5.3/../../../../x86_64-pc-linux-gnu/lib -L/usr/lib/gcc/x86_64-pc-linux-gnu/4.5.3/../../.. -lgfortran -lm
 FFLAGS = -g -O2
 FGREP = /bin/grep -F
-FLIBS =  -L/usr/lib/gcc/i686-pc-linux-gnu/4.3.4 -L/usr/lib/gcc/i686-pc-linux-gnu/4.3.4/../../../../i686-pc-linux-gnu/lib -L/usr/lib/gcc/i686-pc-linux-gnu/4.3.4/../../.. -lgfortranbegin -lgfortran -lm
+FLIBS =  -L/usr/lib/gcc/x86_64-pc-linux-gnu/4.5.3 -L/usr/lib/gcc/x86_64-pc-linux-gnu/4.5.3/../../../../lib64 -L/lib/../lib64 -L/usr/lib/../lib64 -L/usr/lib/gcc/x86_64-pc-linux-gnu/4.5.3/../../../../x86_64-pc-linux-gnu/lib -L/usr/lib/gcc/x86_64-pc-linux-gnu/4.5.3/../../.. -lgfortran -lm
 GL_CFLAGS = -I/usr/X11R6/include 
 GL_CPPFLAGS = -I/usr/X11R6/include 
 GL_LDFLAGS = -pthread
@@ -396,15 +396,15 @@ INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
 LAPACK_LIBS = -llapack
-LD = /usr/i686-pc-linux-gnu/bin/ld
+LD = /usr/x86_64-pc-linux-gnu/bin/ld -m elf_x86_64
 LDFLAGS = 
 LIBOBJS = 
-LIBS =     /windows/Work/Dune/dune-fem/lib/libdunefem.la /windows/Work/Dune/dune-fem/lib/libdunefem.la     /windows/Work/Dune/dune-grid/lib/libdunegrid.la /windows/Work/Dune/dune-grid/lib/libdunegrid.la /windows/Work/Dune/dune-geometry/lib/libdunegeometry.la /windows/Work/Dune/dune-geometry/lib/libdunegeometry.la /windows/Work/Dune/dune-common/lib/libdunecommon.la /windows/Work/Dune/dune-common/lib/libdunecommon.la 
+LIBS =     /usr/people/kraenkel/Dune/dune-fem/lib/libdunefem.la /usr/people/kraenkel/Dune/dune-fem/lib/libdunefem.la     /usr/people/kraenkel/Dune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/Dune/dune-grid/lib/libdunegrid.la /usr/people/kraenkel/Dune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/Dune/dune-geometry/lib/libdunegeometry.la /usr/people/kraenkel/Dune/dune-common/lib/libdunecommon.la /usr/people/kraenkel/Dune/dune-common/lib/libdunecommon.la 
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIPO = 
 LN_S = ln -s
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /windows/Work/Dune/dune-phasefield/missing --run makeinfo
+MAKEINFO = ${SHELL} /usr/people/kraenkel/Dune/dune-phasefield/missing --run makeinfo
 METIS = 
 METIS_INCLUDE = 
 METIS_LDFLAGS = 
@@ -460,12 +460,12 @@ SUPERLU_DIST_LDFLAGS = -L/usr/local/
 SUPERLU_DIST_LIBS = 
 SUPERLU_LIBS = 
 TEX = latex
-UG_CPPFLAGS = 
+UG_CPPFLAGS = -I/disk1/Work/Mymodules/UG/include/ug   -DENABLE_UG
 UG_LDFLAGS = 
-UG_LIBS = 
-UMFPACK_CPPFLAGS = 
-UMFPACK_LDFLAGS = 
-UMFPACK_LIBS = 
+UG_LIBS = -L/disk1/Work/Mymodules/UG/lib   -lugS2 -lugS3 -ldevS
+UMFPACK_CPPFLAGS = -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Include -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UFconfig -I/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Include -DENABLE_UMFPACK=1
+UMFPACK_LDFLAGS = -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/UMFPACK/Lib -L/hosts/raid5/aragorn/dune/modules/x86_64/UMFPACK/AMD/Lib
+UMFPACK_LIBS = -lumfpack -lamd
 VERSION = 0.0
 WML = true
 WORLDDIM = $(GRIDDIM)
@@ -474,10 +474,10 @@ X_CFLAGS =  -I/usr/X11R6/include
 X_EXTRA_LIBS = 
 X_LIBS =  -L/usr/X11R6/lib
 X_PRE_LIBS =  -lSM -lICE
-abs_builddir = /windows/Work/Dune/dune-phasefield/src/problems/1dphase
-abs_srcdir = /windows/Work/Dune/dune-phasefield/src/problems/1dphase
-abs_top_builddir = /windows/Work/Dune/dune-phasefield
-abs_top_srcdir = /windows/Work/Dune/dune-phasefield
+abs_builddir = /usr/people/kraenkel/Dune/dune-phasefield/src/problems/1dphase
+abs_srcdir = /usr/people/kraenkel/Dune/dune-phasefield/src/problems/1dphase
+abs_top_builddir = /usr/people/kraenkel/Dune/dune-phasefield
+abs_top_srcdir = /usr/people/kraenkel/Dune/dune-phasefield
 ac_ct_CC = gcc
 ac_ct_CXX = 
 ac_ct_DUMPBIN = 
@@ -489,28 +489,28 @@ am__leading_dot = .
 am__quote = 
 am__tar = tar --format=posix -chf - "$$tardir"
 am__untar = tar -xf -
-am_dir = /windows/Work/Dune/dune-common/am
+am_dir = /usr/people/kraenkel/Dune/dune-common/am
 bindir = ${exec_prefix}/bin
-build = i686-pc-linux-gnu
+build = x86_64-unknown-linux-gnu
 build_alias = 
-build_cpu = i686
+build_cpu = x86_64
 build_os = linux-gnu
-build_vendor = pc
+build_vendor = unknown
 builddir = .
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = i686-pc-linux-gnu
+host = x86_64-unknown-linux-gnu
 host_alias = 
-host_cpu = i686
+host_cpu = x86_64
 host_os = linux-gnu
-host_vendor = pc
+host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /windows/Work/Dune/dune-phasefield/install-sh
+install_sh = ${SHELL} /usr/people/kraenkel/Dune/dune-phasefield/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -522,7 +522,7 @@ pdfdir = ${docdir}
 prefix = /usr/local
 program_transform_name = s,x,x,
 psdir = ${docdir}
-resolved_top_srcdir = /windows/Work/Dune/dune-phasefield
+resolved_top_srcdir = /usr/people/kraenkel/Dune/dune-phasefield
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 srcdir = .
